feat: organize code in when serving clients in serverCore
fix: fix an issue in parsing config file

--- a/config/default.conf
+++ b/config/default.conf
@@ -20,7 +20,7 @@ server {
         # cgi_ext vector;
 
     location /index.html {
-        allow_methods vector;
+        allow_methods delete;
         autoindex on;
         root variable;
         index hh.html;
