fix small bug in get method

--- a/config/test.conf
+++ b/config/test.conf
@@ -18,11 +18,19 @@ server {
 
 
     location /uploads/test {
-        allow_methods post;
+        allow_methods post get;
         root pages;
-        # index delete.html;
+        index hello.html;
         # autoindex on;
     }
+
+    # location / {
+    #     allow_methods post get;
+    #     root pages;
+    #     index hello.html;
+    #     autoindex on;
+    # }
+
 
     # location /sign-in {
     #     allow_methods get post;
