redirection is work now finally, now i try to handle DELETE request

--- a/config/test.conf
+++ b/config/test.conf
@@ -16,13 +16,13 @@ server {
     }
 
 
-    # location /uploads/test {
-    #     allow_methods post get;
-    #     root pages;
-    #     index hello.html;
-    #     # autoindex on;
-    #     return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
-    # }
+    location /uploads/test {
+        allow_methods post get;
+        root pages;
+        index hello.html;
+        autoindex on;
+        return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
+    }
 
     # location / {
     #     allow_methods post get;
