add logic of the user set file in location in config file

--- a/config/test.conf
+++ b/config/test.conf
@@ -5,12 +5,27 @@ server {
     root pages;
     client_max_body_size 3000000;
 	index index.html;
+    # FORBIDDEN
+    error_page 403 errors/403.html;
+    # NOT_FOUND
     error_page 404 errors/404.html;
+    # METHOD_NOT_ALLOWED
+    error_page 405 errors/405.html;
+    # PAYLOAD_TOO_LARGE
+    error_page 413 errors/413.html;
 
     location /uploads {
         allow_methods post get;
         root pages;
         index imgi_10_ImageOfHTTPRequestResponse.png;
+        autoindex on;
+        # return https://www.youtube.com/watch?v=ADBV0_848UE;
+    }
+
+    location /sign-in.html {
+        allow_methods get post;
+        root pages;
+        index /blabla.html;
         autoindex on;
         # return https://www.youtube.com/watch?v=ADBV0_848UE;
     }
