--- a/config/test.conf
+++ b/config/test.conf
@@ -14,6 +14,13 @@ server {
     # PAYLOAD_TOO_LARGE
     error_page 413 errors/413.html;
 
+    location / {
+        allow_methods get post delete;
+        root pages;
+        index index.html;
+        autoindex on;
+    }
+
     location /uploads {
         allow_methods post get;
         root pages;
@@ -39,12 +46,14 @@ server {
         # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
     }
 
-    # location / {
-    #     allow_methods post get;
-    #     root pages;
-    #     index hello.html;
-    #     autoindex on;
-    # }
+    location /uploads/README.md {
+        allow_methods get delete;
+        root pages;
+        # index hello.html;
+        # autoindex on;
+        # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
+    }
+
 
 
     # location /sign-in {
