--- a/config/test.conf
+++ b/config/test.conf
@@ -14,12 +14,12 @@ server {
     # PAYLOAD_TOO_LARGE
     error_page 413 errors/413.html;
 
-    location / {
-        allow_methods get post delete;
-        root pages;
-        index index.html;
-        autoindex on;
-    }
+    # location / {
+    #     allow_methods get post delete;
+    #     root pages;
+    #     index index.html;
+    #     autoindex on;
+    # }
 
     location /uploads {
         allow_methods post get;
