test cgi folder in root

--- a/config/test.conf
+++ b/config/test.conf
@@ -55,6 +55,14 @@ server {
         # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
     }
 
+    # location /cgi-bin {
+    #     allow_methods get delete;
+    #     root pages;
+    #     # index hello.html;
+    #     autoindex on;
+    #     # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
+    # }
+
 
 
     # location /sign-in {
