feat(server): implement the first version of cgi

--- a/config/test.conf
+++ b/config/test.conf
@@ -83,6 +83,6 @@ server {
     #     index time.py;
     # }
 
-    # cgi_path /bin/bash;
-    # cgi_ext .sh;
+    cgi_path /usr/bin/python3;
+    cgi_ext .py;
 }
