remove comment's for debug and change all resources of pages html to folder www

--- a/config/test.conf
+++ b/config/test.conf
@@ -3,7 +3,7 @@ server {
     listen 8081;
 	server_name webserv/1.0;
     host 127.0.0.1;
-    root pages;
+    root www;
     client_max_body_size 3000000;
 	index index.html;
     # FORBIDDEN
@@ -14,25 +14,31 @@ server {
     error_page 405 errors/405.html;
     # PAYLOAD_TOO_LARGE
     error_page 413 errors/413.html;
+    # INTERNAL_SERVER_ERROR
+    error_page 500 errors/500.html;
+    # SOMTHING_WENT_WRONG
+    error_page 503 errors/503.html;
+    # GATEWAY_TIMEOUT
+    error_page 504 errors/504.html;
 
     # location / {
     #     allow_methods get post delete;
-    #     root pages;
+    #     root www;
     #     index index.html;
     #     autoindex on;
     # }
 
     location /uploads {
         allow_methods post get;
-        root pages;
+        root www;
         index imgi_10_ImageOfHTTPRequestResponse.png;
         autoindex on;
         # return https://www.youtube.com/watch?v=ADBV0_848UE;
     }
 
     location /sign-in.html {
-        allow_methods get post;
-        root pages;
+        # allow_methods get post;
+        root www;
         # index /sign-in.html;
         # autoindex on;
         # return https://www.youtube.com/watch?v=ADBV0_848UE;
@@ -41,7 +47,7 @@ server {
 
     location /uploads/test {
         allow_methods post get;
-        root pages;
+        root www;
         index hello.html;
         autoindex on;
         # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
@@ -49,7 +55,7 @@ server {
 
     location /uploads/README.md {
         allow_methods get delete;
-        root pages;
+        root www;
         # index hello.html;
         # autoindex on;
         # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
@@ -57,7 +63,7 @@ server {
 
     # location /cgi-bin {
     #     allow_methods get delete;
-    #     root pages;
+    #     root www;
     #     # index hello.html;
     #     autoindex on;
     #     # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
@@ -67,7 +73,7 @@ server {
 
     # location /sign-in {
     #     allow_methods get post;
-    #     root pages/;
+    #     root www/;
     #     index index.html;
     #     autoindex on;
     # }
