check some rules in delete method is work

--- a/config/test.conf
+++ b/config/test.conf
@@ -21,45 +21,53 @@ server {
     # GATEWAY_TIMEOUT
     error_page 504 errors/504.html;
 
-    # location / {
+    location / {
+        allow_methods get post delete;
+        root www;
+        index index.html;
+        # autoindex on;
+    }
+
+    # location /uploads {
     #     allow_methods get post delete;
     #     root www;
-    #     index index.html;
+    #     index sbe3.txt;
     #     autoindex on;
+    #     # return https://www.youtube.com/watch?v=ADBV0_848UE;
     # }
 
-    location /uploads {
-        allow_methods post get;
-        root www;
-        index imgi_10_ImageOfHTTPRequestResponse.png;
-        autoindex on;
-        # return https://www.youtube.com/watch?v=ADBV0_848UE;
-    }
-
-    location /sign-in.html {
-        # allow_methods get post;
-        root www;
-        # index /sign-in.html;
-        # autoindex on;
-        # return https://www.youtube.com/watch?v=ADBV0_848UE;
-    }
+    # location /sign-in.html {
+    #     # allow_methods get post;
+    #     root www;
+    #     # index /sign-in.html;
+    #     # autoindex on;
+    #     # return https://www.youtube.com/watch?v=ADBV0_848UE;
+    # }
 
 
-    location /uploads/test {
-        allow_methods post get;
-        root www;
-        index hello.html;
-        autoindex on;
-        # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
-    }
+    # location /uploads/test {
+    #     allow_methods post get;
+    #     root www;
+    #     index hello.html;
+    #     autoindex on;
+    #     # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
+    # }
 
-    location /uploads/README.md {
-        allow_methods get delete;
-        root www;
-        # index hello.html;
-        # autoindex on;
-        # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
-    }
+    # location /uploads/README.md {
+    #     allow_methods get delete;
+    #     root www;
+    #     # index hello.html;
+    #     # autoindex on;
+    #     # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
+    # }
+
+    # location /delete.html {
+    #     allow_methods get;
+    #     root www;
+    #     # index hello.html;
+    #     # autoindex on;
+    #     # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
+    # }
 
     # location /cgi-bin {
     #     allow_methods get delete;
