feat(config): add an default config file

--- a/config/test.conf
+++ b/config/test.conf
@@ -22,19 +22,20 @@ server {
     error_page 504 errors/504.html;
 
     location / {
-        allow_methods get post delete;
+        allow_methods get;
         root www;
         index index.html;
         # autoindex on;
+        # return https://www.youtube.com/watch?v=ADBV0_848UE;
     }
 
-    # location /uploads {
-    #     allow_methods get post delete;
-    #     root www;
-    #     index sbe3.txt;
-    #     autoindex on;
-    #     # return https://www.youtube.com/watch?v=ADBV0_848UE;
-    # }
+    location /uploads {
+        allow_methods get post delete;
+        root www;
+        index l7ankalis.jpg;
+        # autoindex on;
+        # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
+    }
 
     # location /sign-in.html {
     #     # allow_methods get post;
