--- a/config/default.conf
+++ b/config/default.conf
@@ -1,36 +1,50 @@
 server {
     listen 8080;
     listen 8081;
-	server_name localhost;
+	server_name webserv/1.0;
     host 127.0.0.1;
-    root docs/fusion_web/;
+    root www;
     client_max_body_size 3000000;
 	index index.html;
-    error_page 404 error_pages/404.html;
+    # FORBIDDEN
+    error_page 403 errors/403.html;
+    # NOT_FOUND
+    error_page 404 errors/404.html;
+    # METHOD_NOT_ALLOWED
+    error_page 405 errors/405.html;
+    # PAYLOAD_TOO_LARGE
+    error_page 413 errors/413.html;
+    # INTERNAL_SERVER_ERROR
+    error_page 500 errors/500.html;
+    # SOMTHING_WENT_WRONG
+    error_page 503 errors/503.html;
+    # GATEWAY_TIMEOUT
+    error_page 504 errors/504.html;
 
-    location /index.html {
-        allow_methods delete;
-        autoindex on;
-        root variable;
-        index hh.html;
-    }
-    
-    location /server {
-        autoindex on;
-        allow_methods get post;
+    location / {
+        allow_methods get post delete;
+        root www;
+        index index.html;
+        # autoindex on;
+        # return https://www.youtube.com/watch?v=ADBV0_848UE;
     }
 
-	location /red {
-        allow_methods post delete;
-		return /tours;
-	}
+    location /uploads {
+        allow_methods get post delete;
+        root www;
+        index l7ankalis.jpg;
+        autoindex on;
+        # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
+    }
 
     location /cgi-bin {
-        root ./;
+        root www;
         allow_methods get post delete;
-        index time.py;
+        index hello.py;
+        autoindex on;
+        # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
     }
 
-    cgi_path /bin/bash;
-    cgi_ext .sh;
-    }
+    cgi_path /usr/bin/python3;
+    cgi_ext .py;
+}
