feat(CGI): support multiple cgis

--- a/config/default.conf
+++ b/config/default.conf
@@ -45,6 +45,7 @@ server {
         # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
     }
 
-    cgi_path /usr/bin/python3;
-    cgi_ext .py;
+    cgi_conf .sh /usr/bin/bash;
+    cgi_conf .py /usr/bin/python3;
+    cgi_conf .pl /usr/bin/perl;
 }
