add page of bad request & try so parse request from netcat or telnet

--- a/config/default.conf
+++ b/config/default.conf
@@ -6,6 +6,8 @@ server {
     root www;
     client_max_body_size 3000000;
 	index index.html;
+    # BAD_REQUEST
+    error_page 400 errors/400.html;
     # FORBIDDEN
     error_page 403 errors/403.html;
     # NOT_FOUND
