--- a/config/default.conf
+++ b/config/default.conf
@@ -47,5 +47,5 @@ server {
 
     cgi_conf .sh /usr/bin/bash;
     cgi_conf .py /usr/bin/python3;
-    cgi_conf .pl /usr/bin/perl;
+    # cgi_conf .pl /usr/bin/perl;
 }
