refactor: organize project source files

--- a/config/test.conf
+++ b/config/test.conf
@@ -46,6 +46,6 @@ server {
     }
 
     cgi_conf .sh /usr/bin/bash;
-    # cgi_conf .py /usr/bin/python3;
+    cgi_conf .py /usr/bin/python3;
     cgi_conf .pl /usr/bin/perl;
 }
