feat(CGI): add ruby cgi script

--- a/config/test.conf
+++ b/config/test.conf
@@ -48,4 +48,5 @@ server {
     cgi_conf .sh /usr/bin/bash;
     cgi_conf .py /usr/bin/python3;
     cgi_conf .pl /usr/bin/perl;
+    cgi_conf .rb /usr/bin/ruby;
 }
