docs: add comprehensive configuration guide

--- a/config/test.conf
+++ b/config/test.conf
@@ -1,8 +1,8 @@
 server {
     listen 8080;
-    listen 8081;
-	server_name webserv/1.0;
+    listen 1337;
     host 127.0.0.1;
+	server_name webserv/1.0;
     root www;
     client_max_body_size 3000000;
 	index index.html;
@@ -32,7 +32,7 @@ server {
     location /uploads {
         allow_methods get post delete;
         root www;
-        index l7ankalis.jpg;
+        index img.png;
         autoindex on;
         # return https://www.youtube.com/watch?v=yJ2uQNrXQSg;
     }
